# Inventory_API

./: Cargo.toml  docker-compose.yml
migrations/2023-08-15-214502_init_db/: down.sql  up.sql
src/: main.rs  schema.rs
src/handlers/: cable_handlers.rs  cable_type_handlers.rs  mod.rs
src/models/: cable_model.rs  cable_type_model.rs  mod.rs
src/routes/: cable_routes.rs  cable_type_routes.rs  mod.rs
