[package]
name = "inventory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"